ChangeLog

Mar 2021: added Python versions of the Crank-Nicolson solvers conductionT/Q

Jan 2021: added mars_mapii, which has the same functionality as mars_mapi, but uses simple iterations to calculate the equilibrium ice table depth instead of the bisection method. Both use the thermal model in jsub.

Jan 2021: replaced many array allocations of static length NMAX with user-defined length NZ.

18 Jul 2020: Release v1.1.7  doi:10.5281/zenodo.3951242

10 Jul 2020: merged psv + psv2 + psv3, and changed default parameterization to psv2.

2 Jul 2020: renamed Exosphere/ into Exospheres/

29 Jun 2020: added basic lunar ice pump code to Lunar/. Lunar/ is a new directory that will contain miscellaneous model code for the Moon. The lunar exosphere model will stay in Exosphere/ and the 3D terrain irradiance model will stay in Topo3D/.

21 Jun 2020: added subl_h2o, although for now it's an orphan.

27 May 2020: changed psv3, added psv2 (parametrizations for saturation vapor pressure)

22 May 2020: added patm as input to Mars/jsubv; changed default hemispheric Tco2frost temperatures

May 2020: Re-calculated mean annual surface temperatures on Mars over 21 Myr and added them to the archive under Mars/MilankOutput/

16 May 2020: flux -> flux_mars77 in jsubv. This was the last occurrence of the function flux, and the legendary function flux was removed from the collection. It is superseded by subroutine mars_flux2, which provides a consistent treatment of the sky irradiance for an obstructed sky. For horizontal and unobstructed ground flux_mars77 can be used.
