@@ -1,0 +1,12 @@
+ 136.35  134.71  128.14  123.32  118.60  114.30  110.54  107.31  104.59  102.34  100.55   99.20   98.26   97.71   97.53   97.68   98.15   98.90   99.91  101.16  102.63  104.29  106.13  108.13  110.28  112.56  114.97  117.50  120.14  122.88  125.72  128.66  131.68  134.78  137.95  141.19  144.48  147.83  151.20  154.60  158.01  161.41  164.78  168.11  171.38  174.57  177.65  180.62  183.45  186.13  188.66  191.02  193.22  195.26  197.16  198.94  200.63  202.26  203.87  205.50  207.18 
+ 261.01  261.93  255.59  251.40  247.47  243.84  240.39  236.98  233.52  229.94  226.24  222.43  218.52  214.53  210.47  206.37  202.23  198.08  193.93  189.80  185.71  181.69  177.76  173.96  170.31  166.84  163.60  160.62  157.92  155.55  153.54  151.91  150.68  149.89  149.54  149.63  150.17  151.14  152.52  154.28  156.38  158.77  161.41  164.24  167.21  170.26  173.35  176.43  179.46  182.40  185.24  187.96  190.54  192.97  195.27  197.43  199.47  201.42  203.29  205.11  206.90 
+ 294.58  296.16  290.21  286.89  284.02  281.41  278.87  276.25  273.48  270.54  267.46  264.25  260.93  257.50  253.97  250.35  246.62  242.80  238.90  234.91  230.85  226.74  222.58  218.39  214.19  210.00  205.84  201.74  197.73  193.83  190.07  186.50  183.14  180.03  177.20  174.70  172.54  170.76  169.39  168.43  167.91  167.83  168.18  168.95  170.12  171.64  173.48  175.59  177.91  180.38  182.96  185.58  188.20  190.78  193.29  195.71  198.01  200.21  202.30  204.28  206.15 
+ 302.85  304.46  299.28  296.98  295.12  293.42  291.68  289.79  287.73  285.53  283.22  280.80  278.27  275.65  272.92  270.07  267.11  264.03  260.84  257.54  254.13  250.61  246.99  243.29  239.49  235.63  231.70  227.73  223.74  219.73  215.74  211.79  207.91  204.13  200.48  196.99  193.70  190.65  187.87  185.39  183.25  181.48  180.09  179.12  178.56  178.42  178.70  179.37  180.41  181.79  183.46  185.37  187.46  189.69  191.99  194.32  196.64  198.90  201.07  203.13  205.06 
+ 289.97  291.45  287.39  286.27  285.50  284.78  283.95  282.97  281.85  280.62  279.32  277.93  276.46  274.90  273.23  271.46  269.58  267.58  265.46  263.23  260.87  258.39  255.78  253.05  250.20  247.23  244.14  240.94  237.65  234.27  230.82  227.30  223.75  220.18  216.62  213.09  209.63  206.27  203.04  199.98  197.12  194.51  192.17  190.14  188.46  187.14  186.21  185.67  185.53  185.78  186.40  187.36  188.64  190.18  191.94  193.85  195.87  197.93  199.99  201.99  203.89 
+ 249.45  250.81  248.44  248.94  249.67  250.36  250.90  251.32  251.64  251.91  252.14  252.31  252.41  252.44  252.39  252.24  252.00  251.65  251.18  250.60  249.89  249.04  248.06  246.92  245.64  244.20  242.60  240.84  238.93  236.85  234.63  232.27  229.77  227.15  224.43  221.63  218.76  215.86  212.95  210.08  207.26  204.54  201.97  199.57  197.39  195.46  193.82  192.50  191.52  190.90  190.64  190.75  191.21  191.99  193.07  194.40  195.94  197.62  199.40  201.22  203.02 
+ 108.29  109.79  112.21  117.43  122.81  128.15  133.43  138.68  143.94  149.23  154.52  159.78  164.98  170.09  175.07  179.92  184.59  189.07  193.33  197.35  201.11  204.59  207.77  210.64  213.20  215.43  217.32  218.88  220.10  220.98  221.53  221.75  221.66  221.26  220.57  219.61  218.40  216.97  215.35  213.56  211.65  209.66  207.62  205.58  203.59  201.69  199.93  198.35  197.00  195.90  195.09  194.60  194.42  194.56  195.02  195.77  196.79  198.03  199.46  201.03  202.71 
+  91.66   92.65   93.18   95.95   98.50  100.85  103.13  105.44  107.87  110.45  113.16  116.00  118.97  122.04  125.22  128.51  131.90  135.38  138.95  142.61  146.35  150.16  154.02  157.92  161.84  165.76  169.65  173.50  177.27  180.93  184.45  187.80  190.94  193.84  196.47  198.79  200.79  202.43  203.71  204.63  205.19  205.40  205.28  204.89  204.25  203.42  202.47  201.45  200.43  199.46  198.62  197.94  197.47  197.25  197.29  197.61  198.20  199.05  200.15  201.49  203.04 
+  85.40   86.15   86.35   88.50   90.36   92.04   93.71   95.47   97.34   99.33  101.43  103.62  105.89  108.26  110.71  113.27  115.92  118.67  121.52  124.46  127.51  130.64  133.87  137.18  140.56  144.02  147.53  151.08  154.68  158.28  161.89  165.47  169.01  172.47  175.84  179.09  182.18  185.10  187.80  190.26  192.47  194.40  196.04  197.38  198.42  199.18  199.67  199.92  199.98  199.89  199.71  199.49  199.29  199.17  199.18  199.37  199.77  200.40  201.30  202.46  203.92 
+  81.53   82.15   82.25   84.09   85.59   86.96   88.35   89.83   91.41   93.09   94.85   96.68   98.59  100.57  102.64  104.80  107.05  109.40  111.83  114.36  116.98  119.70  122.51  125.41  128.40  131.48  134.64  137.87  141.17  144.53  147.94  151.39  154.86  158.33  161.79  165.23  168.60  171.91  175.11  178.18  181.10  183.85  186.40  188.73  190.82  192.67  194.26  195.61  196.72  197.60  198.30  198.84  199.28  199.65  200.02  200.44  200.96  201.64  202.53  203.67  205.10 
+  78.78   79.32   79.40   81.04   82.32   83.49   84.71   86.02   87.43   88.90   90.44   92.04   93.71   95.46   97.29   99.20  101.19  103.26  105.42  107.67  110.01  112.44  114.97  117.58  120.29  123.08  125.97  128.94  131.99  135.13  138.33  141.59  144.92  148.28  151.68  155.09  158.51  161.91  165.28  168.59  171.82  174.96  177.97  180.84  183.54  186.06  188.37  190.48  192.37  194.04  195.51  196.79  197.90  198.88  199.77  200.62  201.49  202.42  203.48  204.72  206.21 
+  76.68   77.17   77.26   78.75   79.87   80.92   82.02   83.22   84.48   85.81   87.20   88.64   90.16   91.74   93.39   95.12   96.93   98.81  100.78  102.83  104.96  107.18  109.49  111.90  114.39  116.97  119.64  122.41  125.26  128.19  131.21  134.31  137.48  140.71  144.00  147.34  150.71  154.10  157.50  160.90  164.26  167.58  170.83  174.00  177.05  179.98  182.76  185.38  187.83  190.09  192.15  194.04  195.75  197.30  198.73  200.06  201.34  202.62  203.94  205.37  206.95 
